--- a/src/app/deelnemer/opdracht6/opdracht6.component.html
+++ b/src/app/deelnemer/opdracht6/opdracht6.component.html
@@ -10,4 +10,4 @@
 <button (click)="reset()" class="reset">Reset</button>
 <button (click)="klaar()" class="klaar">Klaar</button>
 <countdown [config]="{leftTime: countdown}" (event)="handleEvent($event)" #cd></countdown>
-<app-progress-bar [progress]="progress" [disabledP]="true"></app-progress-bar>
+<app-progress-bar [progress]="progress"></app-progress-bar>
