--- a/src/app/deelnemer/opdracht2/opdracht2.component.html
+++ b/src/app/deelnemer/opdracht2/opdracht2.component.html
@@ -8,4 +8,4 @@
 <button (click)="toggleAlfabet()" class="ha">Toon handalfabet</button>
 <button (click)="klaar()" class="klaar">Klaar</button>
 <countdown [config]="{leftTime: countdown}" (event)="handleEvent($event)" #cd></countdown>
-<app-progress-bar [progress]="progress" [disabledP]="true"></app-progress-bar>
+<app-progress-bar [progress]="progress"></app-progress-bar>
