--- a/src/app/deelnemer/opdracht8/opdracht8.component.html
+++ b/src/app/deelnemer/opdracht8/opdracht8.component.html
@@ -54,4 +54,4 @@
 </div>
 <button (click)="klaar()" class="klaar" *ngIf="allesOK">Klaar</button>
 <countdown [config]="{leftTime: countdown}" (event)="handleEvent($event)" #cd></countdown>
-<app-progress-bar [progress]="progress" [disabledP]="true"></app-progress-bar>
+<app-progress-bar [progress]="progress"></app-progress-bar>
