feat: instructie pagina's toegevoegd. fix: verbeteringen nav overleg met Marjon doorgevoerd

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,17 +2,17 @@
   <span *ngIf="userName && !tutor">
     <button mat-icon-button class="menutoggle" [matMenuTriggerFor]="menu"><mat-icon>menu</mat-icon></button>
     <mat-menu #menu="matMenu">
-      <a mat-menu-item routerLink="deelnemer/opdracht1"><span>1. Sneeuwwitje</span></a>
-      <a mat-menu-item routerLink="deelnemer/opdracht2"><span>2. Gebarentaal</span></a>
-      <a mat-menu-item routerLink="deelnemer/opdracht3"><span>3. Mop</span></a>
-      <a mat-menu-item routerLink="deelnemer/opdracht4"><span>4. Lowietje</span></a>
-      <a mat-menu-item routerLink="deelnemer/opdracht5"><span>5. Puzzel</span></a>
-      <a mat-menu-item routerLink="deelnemer/opdracht6"><span>6. Woord Autisme</span></a>
-      <a mat-menu-item routerLink="deelnemer/opdracht7"><span>7. Cartoonist</span></a>
-      <a mat-menu-item routerLink="deelnemer/opdracht8"><span>8. Naar het huisje</span></a>
-      <a mat-menu-item routerLink="deelnemer/opdracht9"><span>9. Kijkgaatje</span></a>
-      <a mat-menu-item routerLink="deelnemer/opdracht10"><span>10. Vrouw gebaar</span></a>
-      <a mat-menu-item routerLink="deelnemer/opdracht11"><span>11. Kokertje</span></a>
+      <a mat-menu-item routerLink="deelnemer/opdracht1i"><span>1. Sneeuwwitje</span></a>
+      <a mat-menu-item routerLink="deelnemer/opdracht2i"><span>2. Gebarentaal</span></a>
+      <a mat-menu-item routerLink="deelnemer/opdracht3i"><span>3. Mop</span></a>
+      <a mat-menu-item routerLink="deelnemer/opdracht4i"><span>4. Lowietje</span></a>
+      <a mat-menu-item routerLink="deelnemer/opdracht5i"><span>5. Puzzel</span></a>
+      <a mat-menu-item routerLink="deelnemer/opdracht6i"><span>6. Woord Autisme</span></a>
+      <a mat-menu-item routerLink="deelnemer/opdracht7i"><span>7. Cartoonist</span></a>
+      <a mat-menu-item routerLink="deelnemer/opdracht8i"><span>8. Naar het huisje</span></a>
+      <a mat-menu-item routerLink="deelnemer/opdracht9i"><span>9. Kijkgaatje</span></a>
+      <a mat-menu-item routerLink="deelnemer/opdracht10i"><span>10. Vrouw gebaar</span></a>
+      <a mat-menu-item routerLink="deelnemer/opdracht11i"><span>11. Kokertje</span></a>
     </mat-menu>
   </span>
   <i>Autisme Belevings Circuit</i>
