--- a/src/app/deelnemer/opdracht7/opdracht7.component.scss
+++ b/src/app/deelnemer/opdracht7/opdracht7.component.scss
@@ -134,3 +134,9 @@ input, input:focus {
   transform: translate(0px, -320px);
   background-color: #00897b;
 }
+
+.score {
+  position: fixed;
+  bottom: 100px;
+  right: 50px;
+}
