--- a/src/app/deelnemer/opdracht9/opdracht9.component.scss
+++ b/src/app/deelnemer/opdracht9/opdracht9.component.scss
@@ -4,6 +4,7 @@
   height: calc(100vh - 150px);
   max-height: 642px;
   width: 100vw;
+  display: flex;
 }
 
 
@@ -13,7 +14,7 @@
   overflow: hidden;
   margin: 20px auto;
   padding: 15px;
-  display: flex;
+  display: inline-block;
 }
 
 .img {
@@ -34,18 +35,12 @@
 
 .invoer {
   padding: 10px;
-  position: fixed;
-  top: 730px;
-  width: 100%;
+  flex-grow: 1;
 
   .question {
-    width: 350px;
-    margin: 0 auto;
   }
 
   .answers {
-    width: 815px;
-    margin: 0 auto;
   }
 
   //button {
@@ -82,5 +77,12 @@ button{
 }
 
 mat-label{
-  color:#ff8f00;
+  color:#00897b;
+}
+
+canvas, img {
+  position: absolute;
+  top:10px;
+  left:10px;
+  cursor:none;
 }
