handalfabet na eerste keer filmpje kijken. Puzzel kan nu ook op zijn kop worden gemaakt. Plaatje tafelvoetbal kleiner gemaakt. Kijkgaatje kleiner gemaakt

--- a/src/app/deelnemer/opdracht2/opdracht2.component.html
+++ b/src/app/deelnemer/opdracht2/opdracht2.component.html
@@ -1,11 +1,11 @@
 <div #content>
-  <video width="426" height="240" controls>
+  <video width="426" height="240" controls (ended)="ended()">
     <source src="{{videoUrl}}" type="video/mp4">
     Your browser does not support the video tag.
   </video>
   <img src="assets/img/handalfabet.png" alt="handalfabet" *ngIf="showAlfabet">
 </div>
-<button (click)="toggleAlfabet()" class="ha">Toon handalfabet</button>
+<button (click)="toggleAlfabet()" class="ha" *ngIf="gespeeld">Toon handalfabet</button>
 <button (click)="klaar()" class="klaar">Klaar</button>
 <countdown [config]="{leftTime: countdown}" (event)="handleEvent($event)" #cd></countdown>
 <app-progress-bar [progress]="progress"></app-progress-bar>
