--- a/src/app/deelnemer/opdracht2i/opdracht2i.component.html
+++ b/src/app/deelnemer/opdracht2i/opdracht2i.component.html
@@ -1,6 +1,6 @@
 <div>
   <h3>INSTRUCTIE-SHEET  OPDRACHT 2</h3>
   <h4>Probeer het woord met 11 letters te achterhalen door middel van het bekijken van het Vlaamse Gebarentaal-fragment (max. 10 maal herhalen).</h4>
-  <img src="assets/img/instructieOpdracht2.png" alt="instructie opdracht 2" >
+  <img src="assets/img/instructieOpdracht2.png" alt="instructie opdracht 2" width="400">
 </div>
 <button (click)="start()" class="klaar">Start</button>
