--- a/src/app/deelnemer/opdracht7i/opdracht7i.component.html
+++ b/src/app/deelnemer/opdracht7i/opdracht7i.component.html
@@ -1,6 +1,6 @@
 <div>
   <h3>INSTRUCTIE-SHEET  OPDRACHT 7</h3>
   <h4>Probeer de 10 cartoonplaten op te lossen. Wat zegt de cartoonist met de betreffende  plaat? Antwoord kan d.m.v. het verplaatsen van de woordkaartjes onder de cartoonplaat opgelost worden.</h4>
-  <img src="assets/img/instructieOpdracht7.png" alt="puzzel">
+  <img src="assets/img/instructieOpdracht7.png" alt="puzzel" width="200">
 </div>
 <button (click)="start()" class="klaar">Start</button>
