--- a/src/app/deelnemer/opdracht3i/opdracht3i.component.html
+++ b/src/app/deelnemer/opdracht3i/opdracht3i.component.html
@@ -1,6 +1,7 @@
 <div>
   <h3>INSTRUCTIE-SHEET  OPDRACHT 3</h3>
   <h4>Luister het bericht af en meldt hoe de mop eindigt. <br>Noteer dit in het veldje op de opdrachtpagina. <br>Tijdens het beluisteren dien je op 1 been te gaan staan, zoals één van onderstaande posities aangeeft.</h4>
-  <img src="assets/img/instructieOpdracht3.png" alt="Sta op 1 been">
+  <img src="assets/img/opeenbeen.jpg" alt="Sta op 1 been" class="first">
+  <img src="assets/img/optanderebeen.jpg" alt="Sta op 1 been" class="second">
 </div>
 <button (click)="start()" class="klaar">Start</button>
