--- a/src/app/deelnemer/opdracht3i/opdracht3i.component.scss
+++ b/src/app/deelnemer/opdracht3i/opdracht3i.component.scss
@@ -1,5 +1,13 @@
 div{
-  width: 400px;
+  width: 700px;
   margin: 0 auto;
 }
 
+.first {
+  width: 380px;
+}
+
+.second {
+  width:280px;
+  margin-left: 20px;
+}
