--- a/src/app/deelnemer/opdracht5i/opdracht5i.component.html
+++ b/src/app/deelnemer/opdracht5i/opdracht5i.component.html
@@ -1,6 +1,6 @@
 <div>
   <h3>INSTRUCTIE-SHEET  OPDRACHT 5</h3>
-  <h4>Maak de puzzel van 7 stukjes. “Mijn neefje van 4 maakt de puzzel zo!”. De stukjes zijn met de cursor te verslepen. Een puzzelstukje kan ook gedraaid worden d.m.v. het dubbel klikken op de linkermuisknop.</h4>
+  <h4>Maak de puzzel van 7 stukjes. De stukjes zijn met de cursor te verslepen. Een puzzelstukje kan ook gedraaid worden d.m.v. het dubbel klikken op de linkermuisknop.</h4>
   <img src="assets/img/instructieOpdracht5.png" alt="Plaatje van de puzzel">
 </div>
 <button (click)="start()" class="klaar">Start</button>
