--- a/src/app/deelnemer/opdracht3/opdracht3.component.scss
+++ b/src/app/deelnemer/opdracht3/opdracht3.component.scss
@@ -6,3 +6,55 @@ div {
 label {
   margin-right: 5px;
 }
+
+.img {
+  padding: 5px;
+  margin: 5px;
+  background-color: #006666;
+  color: #fff;
+  cursor: pointer;
+}
+
+.destination{
+  border: 1px solid black;
+  min-height: 25px;
+  overflow: hidden;
+  display: inline-block;
+  margin: 0;
+  width: 100px;
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+  0 8px 10px 1px rgba(0, 0, 0, 0.14),
+  0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.example-box:last-child {
+  border: none;
+}
+
+.imgsrc.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+
+.som{
+  width :100px;
+  display: inline-block;
+  margin: 0;
+  line-height: 40px;
+  text-align: right;
+  padding-right: 5px;
+}
+
