--- a/src/app/deelnemer/opdracht2/opdracht2.component.html
+++ b/src/app/deelnemer/opdracht2/opdracht2.component.html
@@ -1,5 +1,5 @@
 <div #content>
-  <video width="426" height="240" controls (ended)="ended()">
+  <video width="426" height="240" autoplay muted controls (ended)="ended()">
     <source src="{{videoUrl}}" type="video/mp4">
     Your browser does not support the video tag.
   </video>
