--- a/src/app/deelnemer/opdracht3/opdracht3.component.html
+++ b/src/app/deelnemer/opdracht3/opdracht3.component.html
@@ -1,5 +1,5 @@
 <div>
-  <audio controls (play)="playing=true" (pause)="playing=false">
+  <audio controls (play)="playing=true" (pause)="playing=false"  [autoplay]="true">
     <source src="assets/img/Twee konijntjes en een egeltje.mp3" type="audio/mpeg" >
     Your browser does not support the audio element.
   </audio>
