--- a/src/app/deelnemer/opdracht3i/opdracht3i.component.scss
+++ b/src/app/deelnemer/opdracht3i/opdracht3i.component.scss
@@ -4,10 +4,12 @@ div{
 }
 
 .first {
-  width: 380px;
 }
 
 .second {
-  width:280px;
   margin-left: 20px;
+}
+
+.first, .second{
+  max-height: calc(100vh - 320px);
 }
