--- a/src/app/deelnemer/opdracht4i/opdracht4i.component.html
+++ b/src/app/deelnemer/opdracht4i/opdracht4i.component.html
@@ -1,6 +1,6 @@
 <div>
   <h3>INSTRUCTIE-SHEET  OPDRACHT 4</h3>
-  <h4>Lowie is in het drukke verkeer zijn beurs verloren. Probeer de beurs voor hem terug te vinden. <br>De opdracht is voltooid als je de juiste plek van de beurs door middel van de cursor hebt omcirkeld.</h4>
+  <h4>Lowie is in het drukke verkeer zijn beurs verloren. Probeer de beurs voor hem terug te vinden. <br>Schuif met het vergrootglas (het vierkantje) over de tekening heen. De details van de tekening worden dan vergroot. Als je de beurs heb gevonden en je klikt op de juist plek dan is de opdracht voltooid. Jij kent dan de vindplaats van de beurs van Lowietje.</h4>
   <img src="assets/img/instructieOpdracht4.png" alt="Beurs van Lowietje" width="50%">
 </div>
 <button (click)="start()" class="klaar">Start</button>
