--- a/src/app/deelnemer/opdracht8/opdracht8.component.html
+++ b/src/app/deelnemer/opdracht8/opdracht8.component.html
@@ -25,27 +25,27 @@
     </section>
     <section>
       <div class="arrows" #arrows>
-        <div>
-          <button mat-icon-button color="accent" (click)="move('Up')" title="move up">
-            <mat-icon>north</mat-icon>
-          </button>
-        </div>
-        <div>
-          <button mat-icon-button color="accent" (click)="move('Left')" title="move left">
-            <mat-icon>west</mat-icon>
-          </button>
-          <button mat-icon-button color="accent" (click)="undo()" title="undo 5 steps">
-            <mat-icon>fast_rewind</mat-icon>
-          </button>
-          <button mat-icon-button color="accent" (click)="move('Right')" title="move right">
-            <mat-icon>east</mat-icon>
-          </button>
-        </div>
-        <div>
-          <button mat-icon-button color="accent" (click)="move('Down')" title="move down">
-            <mat-icon>south</mat-icon>
-          </button>
-        </div>
+<!--        <div>-->
+<!--          <button mat-icon-button color="accent" (click)="move('Up')" title="move up">-->
+<!--            <mat-icon>north</mat-icon>-->
+<!--          </button>-->
+<!--        </div>-->
+<!--        <div>-->
+<!--          <button mat-icon-button color="accent" (click)="move('Left')" title="move left">-->
+<!--            <mat-icon>west</mat-icon>-->
+<!--          </button>-->
+<!--          <button mat-icon-button color="accent" (click)="undo()" title="undo 5 steps">-->
+<!--            <mat-icon>fast_rewind</mat-icon>-->
+<!--          </button>-->
+<!--          <button mat-icon-button color="accent" (click)="move('Right')" title="move right">-->
+<!--            <mat-icon>east</mat-icon>-->
+<!--          </button>-->
+<!--        </div>-->
+<!--        <div>-->
+<!--          <button mat-icon-button color="accent" (click)="move('Down')" title="move down">-->
+<!--            <mat-icon>south</mat-icon>-->
+<!--          </button>-->
+<!--        </div>-->
       </div>
     </section>
   </div>
