--- a/src/app/tutor/dashboard/dashboard.component.html
+++ b/src/app/tutor/dashboard/dashboard.component.html
@@ -55,7 +55,8 @@
     <td mat-cell *matCellDef="let student" [ngClass]="{'active':student.currPage === 3}">
       <span *ngIf="student.answers && student.answers[3]">{{student.answers[3].tijd}} sec
         <span *ngIf="student.answers[3].answer">
-          <fa-icon [icon]="faCheck" [title]="'Antwoord: '+student.answers[3].answer"></fa-icon>
+          <fa-icon [icon]="faCheck" [title]="'Antwoord: '+student.answers[3].answer" *ngIf="student.answers[3].answer.toLowerCase() === 'driewieler'"></fa-icon>
+          <fa-icon [icon]="faTimes" [title]="'Antwoord: '+student.answers[3].answer" *ngIf="student.answers[3].answer.toLowerCase() !== 'driewieler'"></fa-icon>
         </span>
       </span>
     </td>
@@ -66,9 +67,7 @@
     <td mat-cell *matCellDef="let student" [ngClass]="{'active':student.currPage === 4}">
       <span *ngIf="student.answers && student.answers[4]">{{student.answers[4].tijd}} sec
          <span *ngIf="student.answers[4].answer">
-           <a [href]="student.answers[4].answer" target="answer">
-             <fa-icon [icon]="faCheck" [title]="'Click for answer'"></fa-icon>
-           </a>
+             <fa-icon [icon]="faCheck" ></fa-icon>
          </span>
       </span>
     </td>
