--- a/src/app/deelnemer/opdracht8i/opdracht8i.component.html
+++ b/src/app/deelnemer/opdracht8i/opdracht8i.component.html
@@ -1,6 +1,6 @@
 <div>
   <h3>INSTRUCTIE-SHEET  OPDRACHT 8</h3>
-  <h4>Vind de weg naar het huisje! Zoek met de cursor de weg binnen het doolhof, van het startpunt (linksboven) naar het eindpunt (rechtsonder). Een hoera aan het einde is de beloning van de juiste weg.</h4>
+  <h4>Vind de weg naar het huisje! Zoek met de pijltjestoets de weg binnen het doolhof, van het startpunt (linksboven) naar het eindpunt (rechtsonder). Een hoera aan het einde is de beloning van de juiste weg.</h4>
   <img src="assets/img/instructieOpdracht8.png" alt="Doolhof">
 </div>
 <button (click)="start()" class="klaar">Start</button>
